realisation page accueil sans anim ni hover

--- a/package.json
+++ b/package.json
@@ -15,5 +15,6 @@
   "bugs": {
     "url": "https://github.com/Dav-Yuko/DavidAldrin_3_13092021/issues"
   },
-  "homepage": "https://github.com/Dav-Yuko/DavidAldrin_3_13092021#readme"
+  "homepage": "https://github.com/Dav-Yuko/DavidAldrin_3_13092021#readme",
+  "dependencies": {}
 }
